Fix scheduletable overwrap in Edge-

--- a/style/schedule.css
+++ b/style/schedule.css
@@ -11,6 +11,13 @@
         width: 100%;
     }
 }
+@supports (-ms-ime-align: auto) {
+    .normal-schedules table, .schedules-widget table {
+        word-break: break-all;
+        table-layout: fixed;
+        width: 100%;
+    }
+}
 
 .normal-schedules  .date-container, .schedules-widget .date-container {
     width: auto;
